--- a/index.html
+++ b/index.html
@@ -1,35 +1,64 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,
+  100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" 
+  rel="stylesheet">
+  
+  <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/dayjs@1/plugin/relativeTime.js"></script>
+  <script>
+    dayjs.extend(window.dayjs_plugin_relativeTime)
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/dayjs@1/locale/pt-br.js"></script>
+  <script>
+    dayjs.locale('pt-br')
+  </script>
 
-  <head>
-    <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/dayjs@1/plugin/relativeTime.js"></script>
-    <script>
-      dayjs.extend(window.dayjs_plugin_relativeTime)
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/dayjs@1/locale/pt-br.js"></script>
-    <script>
-      dayjs.locale('pt-br')
-    </script>
+  <script type="text/javascript" src="./index.js" defer=""></script>
+  <link rel="stylesheet" href="./index.css">
+</head>
 
-    <script type="text/javascript" src="./index.js" defer=""></script>
-    <link rel="stylesheet" href="./index.css">
-  </head>
+<body>
+  <form onsubmit="adicionarParticipante(event)">
+    <fieldset>
+      <legend>Inscrição</legend>
+      <div>
+        <input 
+        type="text"
+        placeholder="Nome Completo"
+        name="nome"
+        required
+        >
 
-  <body>
-    <table width="100%">
-      <thead style="text-align: left">
-        <tr>
-          <th>Participante</th>
-          <th>Data da inscrição</th>
-          <th>Data do check-in</th>
-        </tr>
-      </thead>
+        <input type="email"
+        placeholder="Email"
+        name="email"
+        required
+        >
 
-      <tbody>
+        <button>
+          REALIZAR INSCRIÇÃO
+        </button>
+      </div>
+    </fieldset>
+</form>
 
-      </tbody>
-    </table>
-  </body>
+  <table width="100%">
+    <thead style="text-align: left">
+      <tr>
+        <th>Participante</th>
+        <th>Data da inscrição</th>
+        <th>Data do check-in</th>
+      </tr>
+    </thead>
+
+    <tbody>
+
+    </tbody>
+  </table>
+</body>
 
 </html>
